# litestar-demo

./: .gitignore  Makefile  README.md  pyproject.toml
app/: app.py
app/controllers/: user_controller.py
app/models/: user_model.py
app/services/: user_service.py
tests/: conftest.py  test_app.py
