[tool.poetry]
name = "litestar-demo"
version = "0.1.0"
description = "A demo of LiteStar"
authors = ["Alexandru Pisarenco <alex@lundas.net>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.21.1"
litestar = {version = "^2.0.0a4", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
pytest = "^7.3.1"
pyright = "^1.1.303"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
